[package]
name = "ttmp"
version = "0.2.1"
edition = "2024"
authors = ["BlueSheep3", "Per"]
description = "Minimal TUI music player that organizes songs using tags"
license = "GPL-3.0-or-later"
repository = "https://github.com/BlueSheep3/ttmp"

[dependencies]
interprocess = "2"
rand = "0.10"
ratatui = { version = "0.30", features = ["serde"] }
rodio = "0.22"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
dirs = "6"
souvlaki = "0.8"
trash = "5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
	"Win32_System_LibraryLoader",
	"Win32_UI",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[features]
